添加必要注释，以及修复升级后的slf version